--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prebuild": "rm -rf build",
     "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js",
     "postbuild": "cp package.json .npmignore README.md build",
-    "dev": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
+    "start": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
     "prepages": "rm -rf docs/build",
     "pages": "NODE_ENV=production webpack -p --progress --config docs/webpack.config.js && node docs/scripts/publish-site.js",
     "lint": "eslint '**/*.js'",
@@ -64,7 +64,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-standalone": "^6.26.0",
     "color": "^1.0.3",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.2.0",
     "debug": "^2.2.0",
     "doctrine": "^2.1.0",
     "enzyme": "^3.2.0",
@@ -73,7 +73,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^4.2.0",
     "get-md-title": "^1.0.4",
     "gh-pages": "^0.12.0",
     "html-loader": "^0.5.5",
@@ -81,20 +81,20 @@
     "husky": "^0.11.4",
     "jasmine-core": "^2.5.2",
     "json-loader": "^0.5.7",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^1.1.2",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^1.0.2",
+    "karma-firefox-launcher": "^1.2.0",
+    "karma-jasmine": "^2.0.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^4.0.2",
     "lint-staged": "^6.1.0",
     "minimist": "^1.2.0",
     "prettier": "^1.14.3",
     "promise-queue": "^2.2.5",
-    "puppeteer": "^1.9.0",
-    "raw-loader": "^0.5.1",
+    "puppeteer": "^1.19.0",
+    "raw-loader": "^3.1.0",
     "react": "^16.2.0",
     "react-codemirror": "^1.0.0",
     "react-docgen": "^2.20.1",
@@ -106,12 +106,12 @@
     "remark": "^9.0.0",
     "remark-highlight.js": "^5.0.0",
     "remark-html": "^7.0.0",
-    "size-limit": "^0.16.1",
+    "size-limit": "^1.3.8",
     "sticky-sidebar": "^3.3.1",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
+    "style-loader": "^1.0.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0",
